Repair individual post collapse in Topic namespace
The code that disabled collapsing topics in the Topic namespace also
ended up stopping moderated posts from being collapsed.  Adjust the
code so it only prevents collapsing the topic.

Bug: 71132

--- a/modules/new/styles/board/collapser.less
+++ b/modules/new/styles/board/collapser.less
@@ -28,20 +28,22 @@ div.flow-element-expanded {
 	}
 }
 
-.flow-board:not(.flow-disable-collapse) {
+.flow-board:not(.flow-disable-topic-collapse) {
 	div.flow-element-collapsed {
 		// topic hidden
 		.flow-post,
 		.flow-reply-form {
 			display: none;
 		}
+	}
+}
 
-		// post hidden
-		.flow-post & {
-			.flow-post-content,
-			.flow-post-meta {
-				display: none;
-			}
+.flow-post {
+	// post hidden
+	div.flow-element-collapsed {
+		.flow-post-content,
+		.flow-post-meta {
+			display: none;
 		}
 	}
 }
